# qudityD3

./: GHZstate.ipynb  Solovay-Kitaev.ipynb  cartan_decomposition.ipynb  chsh.ipynb  chshQutrit.ipynb  cz_decomposition.ipynb  dekompozycjaKartana.nb  dekompozycjaKartanaV2.nb  matrixF.ipynb  nowabaza.nb  nowyCZ.ipynb  obliczanie_reczne.nb  qutritGraphState.ipynb  stanPlus.ipynb  szukanieNowejBazy.ipynb  test.ipynb
QuditsOnQubits/: 2qudits.ipynb  2qudits_measurement.ipynb  2qutrit_Bmax.ipynb  CHSH.ipynb  CZ.qpy  CZ4.qpy  CZgate4.qpy  Example.ipynb  FDAGgate.qpy  Fgate.qpy  Fgate4.qpy  GHZ.qpy  GHZame43BELL.ipynb  GHZsim.ipynb  Xgate.qpy  Xgate4.qpy  ZDAGgate.qpy  Zgate.qpy  Zgate4.qpy  ai_ame43_transpilation.ipynb  ai_ghz_transpilation.ipynb  ame43.qpy  ame43_paper.ipynb  ame43_v2.qpy  ame43fig12.qpy  ame43opti.qpy  ame43sim.ipynb  ame44Ququarts.ipynb  chshTEST.ipynb  ck_algo.ipynb  daggerZgate.ipynb  fixingStabilizators.ipynb  fourier_4lvl.ipynb  ghzQuquarts.ipynb  monitor_jobs.ipynb  old_GHZ_algo.py  old_ame43_create.py  pyproject.toml  real_measurements_IBM.ipynb  recznie_dwa_qutryty.ipynb  (+5 more)
QuditsOnQubits/QuditsOnQubits/: __init__.py  ame_creator.py  bell2.py  bell3.py  bellOperNew.ipynb  bell_operator.py  brisbane.py  compare_distrib.py  distrib.py  ex2.ipynb  fidelity.py  ghz_creator.py  main.py  operators.py  quditsonqubits.py  torino.py
QuditsOnQubits/QuditsOnQubits.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
